--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"mode-watcher": "^0.2.1",
 		"svelte-radix": "^1.0.1",
 		"tailwind-merge": "^2.2.1",
-		"tailwind-variants": "^0.2.0"
+		"tailwind-variants": "^0.2.0",
+		"vaul-svelte": "^0.2.4"
 	}
 }
