--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"clsx": "^2.1.0",
 		"geist": "^1.2.2",
 		"mode-watcher": "^0.2.1",
+		"svelte-legos": "^0.2.2",
 		"svelte-radix": "^1.0.1",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0",
