--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-motion": "^0.12.2",
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -40,6 +41,7 @@
 		"@fontsource/geist-sans": "^5.0.1",
 		"bits-ui": "^0.18.1",
 		"clsx": "^2.1.0",
+		"framer-motion": "^11.0.12",
 		"geist": "^1.2.2",
 		"mode-watcher": "^0.2.1",
 		"svelte-legos": "^0.2.2",
