--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
+		"drizzle-kit": "^0.20.14",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -39,8 +40,11 @@
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.0.16",
 		"@fontsource/geist-sans": "^5.0.1",
+		"@libsql/client": "^0.5.6",
 		"bits-ui": "^0.18.1",
 		"clsx": "^2.1.0",
+		"dotenv": "^16.4.5",
+		"drizzle-orm": "^0.30.4",
 		"framer-motion": "^11.0.12",
 		"geist": "^1.2.2",
 		"mode-watcher": "^0.2.1",
