--- a/package.json
+++ b/package.json
@@ -12,46 +12,46 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.7.3",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "8.56.0",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"autoprefixer": "^10.4.16",
-		"drizzle-kit": "^0.20.14",
-		"eslint": "^8.56.0",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"@typescript-eslint/parser": "^6.21.0",
+		"autoprefixer": "^10.4.20",
+		"drizzle-kit": "^0.26.2",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"postcss": "^8.4.32",
-		"postcss-load-config": "^5.0.2",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"prettier-plugin-tailwindcss": "^0.5.9",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
+		"eslint-plugin-svelte": "^2.46.0",
+		"postcss": "^8.4.47",
+		"postcss-load-config": "^6.0.1",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.7",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"svelte": "^5.1.3",
+		"svelte-check": "^4.0.5",
 		"svelte-motion": "^0.12.2",
-		"tailwindcss": "^3.3.6",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"tailwindcss": "^3.4.14",
+		"tslib": "^2.8.0",
+		"typescript": "^5.6.3",
+		"vite": "^5.4.10"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource-variable/inter": "^5.0.16",
-		"@fontsource/geist-sans": "^5.0.1",
+		"@fontsource-variable/inter": "^5.1.0",
+		"@fontsource/geist-sans": "^5.1.0",
 		"@libsql/client": "^0.5.6",
-		"bits-ui": "^0.18.1",
-		"clsx": "^2.1.0",
+		"bits-ui": "^0.18.6",
+		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
-		"drizzle-orm": "^0.30.4",
-		"framer-motion": "^11.0.12",
-		"geist": "^1.2.2",
-		"mode-watcher": "^0.2.1",
-		"svelte-legos": "^0.2.2",
-		"svelte-radix": "^1.0.1",
-		"tailwind-merge": "^2.2.1",
-		"tailwind-variants": "^0.2.0",
+		"drizzle-orm": "^0.35.3",
+		"framer-motion": "^11.11.10",
+		"geist": "^1.3.1",
+		"mode-watcher": "^0.4.1",
+		"runed": "^0.15.3",
+		"svelte-radix": "^2.0.1",
+		"tailwind-merge": "^2.5.4",
+		"tailwind-variants": "^0.2.1",
 		"vaul-svelte": "^0.2.4"
 	}
 }
